Finished with the html, bar the footer copyright information

--- a/index.html
+++ b/index.html
@@ -61,7 +61,39 @@
           </article>
           <img src="/images/illustration-your-users.svg" alt="Your Users">
         </section>
+        <section>
+        <p>Ready To Build Your Community?</p>
+        <button type="submit">Get Started For Free</button>
+        </section>
       </main>
+      <footer>
+        <div>
+          <img src="/images/logo.svg" alt="Huddle Logo">
+          <span><img src="/images/icon-location.svg" alt="Location"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, beatae. Odio odit repellendus veritatis, magni possimus ipsam vel eos excepturi!</p></span>
+          <span><img src="/images/icon-phone.svg" alt="Phone">+1-543-123-4567</span>
+          <span><img src="/images/icon-email.svg" alt="Email">example@huddle.com</span>
+        </div>
+        <div>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">What We Do</a></li>
+            <li><a href="#">FAQ</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><a href="#">Career</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Contact Us</a></li>
+          </ul>
+        </div>
+        <div>
+          <span>
+            <img src="/images/" alt="">
+          </span>
+        </div>
+      </footer>
+
     </div>
   </body>
 </html>
