Tried to fix path problems for images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Landing Page | Home</title>
     <link
       rel="shortcut icon"
-      href="/images/favicon-32x32.png"
+      href="images/favicon-32x32.png"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="style.css" />
@@ -16,7 +16,7 @@
     <div id="container">
       <header>
         <div id="header-nav">
-          <img src="/images/logo.svg" alt="Huddle-logo" />
+          <img src="images/logo.svg" alt="Huddle-logo" />
           <button id="free-btn" type="submit">Try It Free</button>
         </div>
         <div id="head-sub">
@@ -33,7 +33,7 @@
             <a href="#"><button id="sub-btn" type="submit">Get Started For Free</button></a>
           </div>
           <div id="headsub-right">
-            <img src="/images/illustration-mockups.svg" alt="Mockups" />
+            <img src="images/illustration-mockups.svg" alt="Mockups" />
           </div>
         </div>
       </header>
@@ -43,10 +43,10 @@
           <h2>Grow Together</h2>
           <p>Generate meaningful discussions with your audience and build a strong community. Think of the insightful conversations you miss out on with a feedback form.</p>
           </article>
-          <img src="/images/illustration-grow-together.svg" alt=" Grow Together">
+          <img src="images/illustration-grow-together.svg" alt=" Grow Together">
         </section>
         <section id="flowing-conversations">
-          <img src="/images/illustration-flowing-conversation.svg" alt="Flowing conversations">
+          <img src="images/illustration-flowing-conversation.svg" alt="Flowing conversations">
           <article>
             <h2>Flowing Conversations</h2>
             <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
@@ -59,7 +59,7 @@
               It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, yourusers can start chatting immediately.
             </p>
           </article>
-          <img src="/images/illustration-your-users.svg" alt="Your Users">
+          <img src="images/illustration-your-users.svg" alt="Your Users">
         </section>
         <section>
         <p>Ready To Build Your Community?</p>
@@ -68,10 +68,10 @@
       </main>
       <footer>
         <div>
-          <img src="/images/logo.svg" alt="Huddle Logo">
+          <img src="images/logo.svg" alt="Huddle Logo">
           <span><img src="/images/icon-location.svg" alt="Location"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, beatae. Odio odit repellendus veritatis, magni possimus ipsam vel eos excepturi!</p></span>
-          <span><img src="/images/icon-phone.svg" alt="Phone">+1-543-123-4567</span>
-          <span><img src="/images/icon-email.svg" alt="Email">example@huddle.com</span>
+          <span><img src="images/icon-phone.svg" alt="Phone">+1-543-123-4567</span>
+          <span><img src="images/icon-email.svg" alt="Email">example@huddle.com</span>
         </div>
         <div>
           <ul>
@@ -89,7 +89,7 @@
         </div>
         <div>
           <span>
-            <img src="/images/" alt="">
+            <img src="images/" alt="">
           </span>
         </div>
       </footer>
