--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
           </article>
           <img src="images/illustration-your-users.svg" alt="Your Users">
         </section>
-        <section>
+        <div id="build">
         <p>Ready To Build Your Community?</p>
         <button type="submit">Get Started For Free</button>
-        </section>
+        </div>
       </main>
       <footer>
-        <div>
-          <img src="images/logo.svg" alt="Huddle Logo">
-          <span><img src="/images/icon-location.svg" alt="Location"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, beatae. Odio odit repellendus veritatis, magni possimus ipsam vel eos excepturi!</p></span>
-          <span><img src="images/icon-phone.svg" alt="Phone">+1-543-123-4567</span>
-          <span><img src="images/icon-email.svg" alt="Email">example@huddle.com</span>
+        <div id="one">
+          <img id="footer-logo" class="footer-image" src="images/logo.svg" alt="Huddle Logo">
+          <span><img class="footer-image" src="/images/icon-location.svg" alt="Location"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, beatae. Odio odit repellendus veritatis, magni possimus ipsam vel eos excepturi!</p></span>
+          <span><img class="footer-image" src="images/icon-phone.svg" alt="Phone">+1-543-123-4567</span>
+          <span><img class="footer-image" src="images/icon-email.svg" alt="Email">example@huddle.com</span>
         </div>
-        <div>
+        <div id="two">
           <ul>
             <li><a href="#">About Us</a></li>
             <li><a href="#">What We Do</a></li>
